bugfix css for small screen on homepage (truncate game status)

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1140,6 +1140,10 @@ ul>li.player>a {
 	font-size: 12px;
 	font-weight: bold;
 	text-align: right;
+	/* trunk text */
+	white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 #listGamesView .game-player {
